packages/isar_generator/test/errors/property/enum_null_value.dart
// null values are not supported

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  @Enumerated(EnumType.value, 'value')
  late MyEnum prop;
}

enum MyEnum {
  optionA;

  final String? value = null;
}
